@@ -17,10 +17,11 @@
 
 
 <TD VALIGN="TOP" BGCOLOR="#FFFFFF">
-<FONT SIZE="5"><STRONG>Project Admins:</STRONG></FONT><BR>
+<FONT SIZE="5"><STRONG>Current Developpers:</STRONG></FONT><BR>
 <UL>
-<LI><STRONG>Fabian</STRONG> </LI>
-<LI><STRONG>Ujwal S. Setlur</STRONG> </LI>
+<LI><A HREF="http://sourceforge.net/users/yfabian/"><STRONG>Fabian</STRONG></A> </LI>
+<LI><A HREF="http://sourceforge.net/users/ujwal/"><STRONG>Ujwal S. Setlur</STRONG></A> </LI>
+<LI><A HREF="http://sourceforge.net/users/dnedrow/"><STRONG>David Nedrow</STRONG></A> </LI>
 </UL>
 
 <FONT SIZE="5"><STRONG>Thanks to:</STRONG></FONT><BR>
